fix: search on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,8 @@
   --color-foreground: #EDEAF7;
   --color-background: #040110;
   --color-secondary: #855EFF;
+
+  --breakpoint-xs: 500px;
 }
 
 :root {
